# rust-api

./: .env.exemple  Cargo.toml  Rocket.toml  rustfmt.toml
migrations/2023-01-23-132925_create_posts/: up.sql
migrations/2023-01-24-094832_posts/: up.sql
src/: connection.rs  lib.rs  main.rs  models.rs  post.rs  schema.rs
